# video2doc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install-deps.bat  install-deps.sh  promt.md  requirements.txt  transcribe.sh
.github/workflows/: build.yml  release.yml
doc/: README.md  architecture.md  gui-spec.md  requirements.md  workflow.md  wxwidgets-reference.md
docker/: Dockerfile  Dockerfile.win  README_DOCKER.md  build-win-inner.sh  build-win.sh  build.sh  run.sh
packaging/appimage/: video2doc.desktop
packaging/inno/: video2doc.iss
src/: ConfigManager.cpp  ConfigManager.h  ControlLogPanel.cpp  ControlLogPanel.h  DependencyChecker.cpp  DependencyChecker.h  DocGenerator.cpp  DocGenerator.h  MainFrame.cpp  MainFrame.h  PathValidator.cpp  PathValidator.h  ProcessRunner.cpp  ProcessRunner.h  ProjectListPanel.cpp  ProjectListPanel.h  PromptEditorPanel.cpp  PromptEditorPanel.h  SettingsPanel.cpp  SettingsPanel.h  TranscriptionEngine.cpp  TranscriptionEngine.h  main.cpp
